Blender 's fullscreen vs OSX fullscreen conflict #35225

Closed
opened 2013-05-05 15:33:22 +02:00 by Kris Slazinski · 6 comments

%%%--- Operating System, Graphics card ---
OS X 10.8.3, NVIDIA GeForce 320M 256 MB

- Blender version with error, and version that worked ---

Blender 2.67 RC, previous versions didn't have OS X' fullscreen

- Short description of error ---

Newly added OSX fullscreen support in Blender is very cool, but sadly it is in conflict with Blender's built-in fullscreen.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I've attached screenshots depicting each step:

  1. Turn on OSX fullscreen in Blender.
  2. There is a top menu accesible while mouse cursor is at the top of the screen - you can turn off there the fullscreen mode. (Don't use it yet, just check if it's there)
  3. Toggle Blender's fullscreen mode (Alt+F11) on.
  4. Now toggle Blender's fullscreen mode (Alt+F11) off.
  5. You can't turn off OSX fullscreen anymore. Quiting Blender is the only way to go.

Possible solutions:

  1. Removing blender's Toggle Fullscreen option under OSX
  2. Making both options work the same.

I see one advantage of Blender's fullscreen against OSX fullscreen - it is faster. Blender goes fullscreen instantly, while using OSX button it is animated. So maybe that's good thing that tehy are both in Blender. But they shouldn't be conflicted.%%%

%%%--- Operating System, Graphics card --- OS X 10.8.3, NVIDIA GeForce 320M 256 MB - Blender version with error, and version that worked --- Blender 2.67 RC, previous versions didn't have OS X' fullscreen - Short description of error --- Newly added OSX fullscreen support in Blender is very cool, but sadly it is in conflict with Blender's built-in fullscreen. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I've attached screenshots depicting each step: 1. Turn on OSX fullscreen in Blender. 2. There is a top menu accesible while mouse cursor is at the top of the screen - you can turn off there the fullscreen mode. (Don't use it yet, just check if it's there) 3. Toggle Blender's fullscreen mode (Alt+F11) on. 4. Now toggle Blender's fullscreen mode (Alt+F11) off. 5. You can't turn off OSX fullscreen anymore. Quiting Blender is the only way to go. Possible solutions: 1. Removing blender's Toggle Fullscreen option under OSX 2. Making both options work the same. I see one advantage of Blender's fullscreen against OSX fullscreen - it is faster. Blender goes fullscreen instantly, while using OSX button it is animated. So maybe that's good thing that tehy are both in Blender. But they shouldn't be conflicted.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Yes you cannot use both at the same time, you need to pick one... currently there's no provision in Blender to prevent this.
I might remove it for the release then.%%%

%%%Yes you cannot use both at the same time, you need to pick one... currently there's no provision in Blender to prevent this. I might remove it for the release then.%%%

%%%Fix in svn, thanks for the report. Made it impossible to enable both at the same time now.

The main reason to keep supporting the old fullscreen is because the new Lion fullscreen does not work with multiple monitors, it will just give black screens on the other monitors. This is a limitation of OS X, you can find many complaints about this online. Makes it all a bit confusing.%%%

%%%Fix in svn, thanks for the report. Made it impossible to enable both at the same time now. The main reason to keep supporting the old fullscreen is because the new Lion fullscreen does not work with multiple monitors, it will just give black screens on the other monitors. This is a limitation of OS X, you can find many complaints about this online. Makes it all a bit confusing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger

I can't enable old Fullscreen, no matter what i do! alt+F11 and Menu Window - Toggle Fullscreen both do native stupid osx Fullscreen.

How can i get the old Fullscreen??

And can't we just disable Native Fullscreen altogether? Or maybe set alt+F11 and Menu entry to do old Fullscreen - for new Fullscreen people could use the Osx Fullscreen button in Windowbar top right.

I can't enable old Fullscreen, no matter what i do! alt+F11 and Menu Window - Toggle Fullscreen both do native stupid osx Fullscreen. How can i get the old Fullscreen?? And can't we just disable Native Fullscreen altogether? Or maybe set alt+F11 and Menu entry to do old Fullscreen - for new Fullscreen people could use the Osx Fullscreen button in Windowbar top right.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35225
No description provided.