Fix #35225: new OS X Lion fullscreen did not work together well with old fullscreen option. It was possible to enable both at the same time which got you stuck in a state where it was impossible to exit fullscreen. Now I've made them mutually exlusive, only one can be enabled at the same time.

Note the reason we need to support both is because the new Lion fullscreen does
not work with multiple monitors, it will just give black screens on the other
monitors. This is a limitation of OS X, you can find many complaints about this
online.